--- a/css/styles.css
+++ b/css/styles.css
@@ -106,24 +106,116 @@ ul{
 			cursor: pointer;
 		}
 
-
-h2{
-	font-weight: 100;
-}
-
 .s-text{
 	font-size: 90%;
 }
 
 .section-4{
 	padding-top: 4%;
-	padding-bottom: 3%;
+	padding-bottom: 4%;
+}
+
+.section-3{
+	padding-top: 1%;
+	padding-bottom: 1%;
+	position: relative;
+
 }
 
 .text-box{
-padding-right: 10%;
+	padding-right: 10%;
 }
 
 .phone-up{
 	bottom: -150px;
+}
+
+		.phone-up img{
+			opacity: 0.2;
+		}
+
+.img-store{
+	width: 150px;
+	margin: 2%;
+}
+
+.img-store-1{
+	width: 110px;
+	margin: 1%;
+}
+
+.phone-right{
+	margin-bottom: -100px;
+	width: 100%;
+	max-width: 275px;
+	min-width: 200px;
+
+}
+
+.phone-left{
+	width: 100%;
+	max-width: 275px;
+	min-width: 200px;
+}
+
+.phone-slide{
+	max-width: 350px;
+
+}
+
+.blue-text{
+	color: rgb(80,184,226);
+}
+
+.section-2{
+	margin-bottom: -125px;
+	padding-top: 3%;
+}
+
+.section-2 p{
+	padding: 0 5%;
+	line-height: 2;
+}
+
+.phones-3{
+	max-width: 720px;
+}
+
+.div-phones-3{
+	position: relative;
+	bottom: -150px;
+}
+
+.section-1{
+	background-color:rgb(73, 181, 225);
+}
+
+#slider h3{
+	padding-left: 4%;
+	padding-right:4%;
+}
+
+.video{
+	margin-top:5%;
+}
+
+.nav{
+	padding: 0;
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
+	background-color: rgba(255,255,255,0.5);
+}
+
+.nav:hover{
+	cursor: pointer;
+}
+
+#nav-0{
+	background-color: rgb(255,255,255);
+}
+
+#nav-1{
+	background-color: rgb(255,255,255);
+	opacity: 0.5;
 }
